[package]
name = "nft-marketplace"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = {git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sp-core = { version = "4.1.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable", default-features = false, features = ["full_crypto"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
nft-io = {path = "../nft/io"}
market-io = {path = "io"}
fungible-token-messages = {path = "../../fungible-token-messages"}
schnorrkel = { version = "0.9.1", features = [
	"preaudit_deprecated",
	"u64_backend",
], default-features = false, optional = true }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}