[package]
name = "nft"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = {git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
non-fungible-token = {path = "../../non-fungible-token"}
sp-core = { version = "4.1.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable", default-features = false, features = ["full_crypto"] }
nft-io = {path = "io"}
market-io = {path = "../marketplace/io"}
fungible-token-messages = {path = "../../fungible-token-messages"}
royalties = {path = "royalties"}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}